--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon"
         href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuyPFWnRZjNf4YXS0X9pci9M-qdhfO-KA27g&usqp=CAU">
-    <link rel="stylesheet" href="blog_style.css">
+    <link rel="stylesheet" href="/Blog_Page/blog_style.css">
 
     <title>Blog_Template</title>
 
@@ -32,7 +32,7 @@
                 </p>
             </div>
             <div class="heading_card">
-                <div id="header_card_image"><img src="head_blog.PNG" alt=""></div>
+                <div id="header_card_image"><img src="/Blog_Page/head_blog.PNG" alt=""></div>
                 <div id="heading_card_info">
                     <p class="date_record">
                         Maintenance &lt; February 2022 &gt; <br>
@@ -59,15 +59,12 @@
                 <button>View All</button>
                 <button>4 of 10</button>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
+            <br><br><br><br>
             <div id="trending_cards">
                 <!-----------------------------------------Trending Card1------------------------------------------------->
                 <div class="trending_card_block" id="trending_card1">
                     <div class="trending_image">
-                        <img src="trending_card1.PNG" alt="">
+                        <img src="/Blog_Page/trending_card1.PNG" alt="">
                         <div class="count"><a href="#">1</a></div>
                     </div>
                     <div class="trending_content">
@@ -84,7 +81,7 @@
                 <!-----------------------------------------Trending Card2------------------------------------------------->
                 <div class="trending_card_block" id="trending_card2">
                     <div class="trending_image">
-                        <img src="trending_card2.PNG" alt="">
+                        <img src="/Blog_Page/trending_card2.PNG" alt="">
                         <div class="count"><a href="#">2</a></div>
                     </div>
                     <div class="trending_content">
@@ -101,7 +98,7 @@
                 <!-----------------------------------------Trending Card3------------------------------------------------->
                 <div class="trending_card_block" id="trending_card3">
                     <div class="trending_image">
-                        <img src="trending_card3.PNG" alt="">
+                        <img src="/Blog_Page/trending_card3.PNG" alt="">
                         <div class="count"><a href="#">3</a></div>
                     </div>
                     <div class="trending_content">
@@ -118,7 +115,7 @@
                 <!-----------------------------------------Trending Card4------------------------------------------------->
                 <div class="trending_card_block" id="trending_card4">
                     <div class="trending_image">
-                        <img src="trending_card4.PNG" alt="">
+                        <img src="/Blog_Page/trending_card4.PNG" alt="">
                         <div class="count"><a href="#">4</a></div>
                     </div>
                     <div class="trending_content">
@@ -154,7 +151,7 @@
             <div id="library_card_div">
                 <div class="library_cards card1">
                     <div class="library_image">
-                        <img src="library_card1.PNG" alt="">
+                        <img src="/Blog_Page/library_card1.PNG" alt="">
                     </div>
                     <div class="library_content">
                         <div class="library_title">Marketing Automation</div>
@@ -170,7 +167,7 @@
                     <h2>Featured Blogs</h2>
                     <div class="library_cards resource_card2">
                         <div class="library_image">
-                            <img src="library_card2.PNG" alt="">
+                            <img src="/Blog_Page/library_card2.PNG" alt="">
                         </div>
                         <div class="library_content">
                             <div class="library_title">Maintenance</div>
@@ -182,7 +179,7 @@
                     <!-----------------------------------------Library Card3------------------------------------------------->
                     <div class="library_cards resource_card3">
                         <div class="library_image">
-                            <img src="library_card3.PNG" alt="">
+                            <img src="/Blog_Page/library_card3.PNG" alt="">
                         </div>
                         <div class="library_content">
                             <div class="library_title">Automotive</div>
@@ -195,7 +192,7 @@
                     <!-----------------------------------------Library Card4------------------------------------------------->
                     <div class="library_cards resource_card4">
                         <div class="library_image">
-                            <img src="library_card4.PNG" alt="">
+                            <img src="/Blog_Page/library_card4.PNG" alt="">
                         </div>
                         <div class="library_content">
                             <div class="library_title">Tips & Tricks</div>
@@ -220,7 +217,7 @@
             <!---------------------------------------------other Blog Card1------------------------>
             <div class="trending_card_block" id="trending_card1">
                 <div class="trending_image">
-                    <img src="trending_card1.PNG" alt="">
+                    <img src="/Blog_Page/trending_card1.PNG" alt="">
                 </div>
                 <div class="trending_content">
                     <div class="trending_title">
@@ -236,7 +233,7 @@
             <!---------------------------------------------other Blog Card2------------------------>
             <div class="trending_card_block" id="trending_card1">
                 <div class="trending_image">
-                    <img src="trending_card1.PNG" alt="">
+                    <img src="/Blog_Page/trending_card1.PNG" alt="">
                 </div>
                 <div class="trending_content">
                     <div class="trending_title">
@@ -252,7 +249,7 @@
             <!---------------------------------------------other Blog Card3------------------------>
             <div class="trending_card_block" id="trending_card1">
                 <div class="trending_image">
-                    <img src="trending_card1.PNG" alt="">
+                    <img src="/Blog_Page/trending_card1.PNG" alt="">
                 </div>
                 <div class="trending_content">
                     <div class="trending_title">
@@ -268,7 +265,7 @@
             <!---------------------------------------------other Blog Card4------------------------>
             <div class="trending_card_block" id="trending_card1">
                 <div class="trending_image">
-                    <img src="trending_card1.PNG" alt="">
+                    <img src="/Blog_Page/trending_card1.PNG" alt="">
                 </div>
                 <div class="trending_content">
                     <div class="trending_title">
